--- a/page/work/bounty/index.axml
+++ b/page/work/bounty/index.axml
@@ -24,7 +24,7 @@
           <view class="brief-bottom">
             <text class="brief-bottom-left">限制人数：{{item.peopleNum}}
             </text>
-            <text class="brief-bottom-right">{{item.status == '0' ? '发布中' : (item.status == '1' ? '已领取' : (item.status == '2' ? '审批中' : (item.status == '3' ? '已完成' : '已拒绝')))}}
+            <text class="brief-bottom-right">{{item.userState == '0' ? '发布中' : (item.userState == '1' ? '已领取' : (item.userState == '2' ? '审批中' : (item.userState == '3' ? '已完成' : '已拒绝')))}}
             </text>
           </view>
         </view>
@@ -32,14 +32,14 @@
         </view>
       </list-item>
       <view class="content">
-          <view class="content-item people" a:if="{{users.length}}">
-              <text class="text">他们已经接受了该任务</text><text class="number"></text>
+          <view class="content-item people" a:if="{{item.taskAndUserList.length}}">
+              <text class="text">他们已经接受了该任务：</text><text class="number" a:for="{{item.taskAndUserList}}">{{item.userName}}</text>
           </view>
-          <view class="content-item change" onTap="change" a:if="{{item.status == 0}}" data-index="{{index}}">
+          <view class="content-item change" onTap="change" a:if="{{item.userState == 0}}" data-index="{{index}}">
               <text class="text">选择接受这项任务</text>
               <text class="right-arrow"></text>
           </view>
-          <view class="content-item change" onTap="commit" a:if="{{item.status == 1}}" data-index="{{index}}">
+          <view class="content-item change" onTap="commit" a:if="{{item.userState == 1}}" data-index="{{index}}">
               <text class="text">提交完成这项任务</text>
               <text class="right-arrow"></text>
           </view>
