--- a/page/work/callto/reapprove/index.axml
+++ b/page/work/callto/reapprove/index.axml
@@ -23,21 +23,26 @@
     <view class="form-line" />
     <view class="page-section-title">审批备注</view>
     <view class="page-section-demo">
-      <textarea auto-height placeholder="输入备注信息" name="textarea" style="font-size: 14px" value="{{options.remark}}" disabled="{{true}}"/>
+      <textarea auto-height placeholder="输入备注信息" name="textarea" style="font-size: 14px" value="{{options.remark }}" disabled="{{true}}"/>
     </view>
-    <view class="form-line" />
-    <view class="page-section-title"></view>
-    <view class="page-section-demo important">
+     <view class="form-line" />
+    <view class="page-section-title">* 申诉理由</view>
+    <view class="page-section-demo">
       <textarea auto-height placeholder="输入备注信息" name="reason" style="font-size: 14px" />
     </view>
-    <view class="form-line" />
-    <!-- <view class="picture-btns">
+    <!-- <view class="form-line" />
+    <view class="page-section-title">申诉理由</view>
+    <view class="page-section-demo important">
+      <textarea auto-height placeholder="输入申诉理由" name="reason" style="font-size: 14px" />
+    </view> -->
+    <!-- <view class="form-line" />
+    <view class="picture-btns">
       <view onTap="chooseImage">选择照片
         <text class="details" a:if="{{filePaths.length == 0}}">图片大小不能超过4M</text>
         <text class="details" a:else>您选择了{{filePaths.length}}张图片</text>
       </view>
-    </view> -->
-    <imgs onLoad="load" onFilePaths="filePaths" />
+    </view> 
+    <imgs onLoad="load" onFilePaths="filePaths" /> -->
     <view class="form-line" />
     <picker onChange="changePoints" value="{{arrIndexPoints}}" range="{{pointsArray}}" name="points">
       <view class="row">
@@ -64,14 +69,14 @@
         <image class="row-arrow" src="/image/arrowright.png" mode="aspectFill" />
       </view>
     </picker>
-    <!-- <view class="form-line" />
-    <picker onChange="changeTo" value="{{arrIndexTo}}" range="{{users}}" range-key="userName" name="to">
+    <view class="form-line" />
+    <picker onChange="changeTo" value="{{ssuser.userName}} " range="{{ssuser}}"  range-key="userName" name="to">
       <view class="row">
-        <view class="row-title">抄送</view>
-        <view class="row-extra">当前选择：{{users[arrIndexTo].userName}}</view>
+        <view class="row-title">申诉人</view>
+        <view class="row-extra">当前选择：{{ssuser.userName}} </view>
         <image class="row-arrow" src="/image/arrowright.png" mode="aspectFill" />
       </view>
-    </picker> -->
+    </picker>
     <view class="form-line" />
     <view class="select-section">
       <view class="title">抄送<text class="details">审批通过后，通知抄送人</text></view>
