--- a/page/work/callto/reapprove/index.axml
+++ b/page/work/callto/reapprove/index.axml
@@ -43,6 +43,7 @@
       </view>
     </view> 
     <imgs onLoad="load" onFilePaths="filePaths" /> -->
+     <imgs onLoad="load" onFilePaths="filePaths" />
     <view class="form-line" />
     <picker onChange="changePoints" value="{{arrIndexPoints}}" range="{{pointsArray}}" name="points">
       <view class="row">
