--- a/components/details/index.axml
+++ b/components/details/index.axml
@@ -42,6 +42,11 @@
       <text class="item-left">备注</text>
       <text class="item-right" style="padding-left: 35%;display: block">{{data.spRemark}}</text>
     </view>
+    <!-- 申诉理由 -->
+    <view class="item">
+      <text class="item-left">申诉理由</text>
+      <text class="item-right" style="padding-left: 35%;display: block">{{data.appReason}}</text>
+    </view>
     <view class="item" a:if="{{status == 2}}">
       <text class="item-left">不过原因</text>
       <text class="item-right" style="padding-left: 35%;display: block;color: red">{{data.disapproveUndo ? data.disapproveUndo : '无'}}</text>
