--- a/page/work/bounty/index.axml
+++ b/page/work/bounty/index.axml
@@ -35,11 +35,11 @@
           <view class="content-item people" a:if="{{item.taskAndUserList.length}}">
               <text class="text">他们已经接受了该任务：</text><text class="number" a:for="{{item.taskAndUserList}}">{{item.userName}}</text>
           </view>
-          <view class="content-item change" onTap="change" a:if="{{item.userState == 0}}" data-index="{{index}}">
+          <view class="content-item change" onTap="change" a:if="{{item.userState == 0 && item.peopleNum > 0}}" data-index="{{index}}">
               <text class="text">选择接受这项任务</text>
               <text class="right-arrow"></text>
           </view>
-          <view class="content-item change" onTap="commit" a:if="{{item.userState == 1}}" data-index="{{index}}">
+          <view class="content-item change" onTap="commit" a:if="{{item.userState == 1}}" data-index="{{index}}" style="background-color: #FFB549">
               <text class="text">提交完成这项任务</text>
               <text class="right-arrow"></text>
           </view>
